# ham-radio-extra-license-study-guide

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: amateur-extra-license-prep-augmented-facts.epub  amateur-extra-license-prep-augmented-facts.txt  amateur-extra-license-prep-augmented-qa.epub  amateur-extra-license-prep-augmented-qa.txt  amateur-extra-license-prep-fact-manifest.json  amateur-extra-license-prep-fact-script.txt  amateur-extra-license-prep-facts.epub  amateur-extra-license-prep-facts.txt  amateur-extra-license-prep-pool-prose.json  amateur-extra-license-prep-pool.json  amateur-extra-license-prep-qa-manifest.json  amateur-extra-license-prep-qa.epub  amateur-extra-license-prep-qa.mp3.placeholder.txt  amateur-extra-license-prep-script.txt  amateur-extra-license-prep-study-workbook.epub  artifacts.js  artifacts.json  index.html
docs/augmented/: facts.epub  facts.txt  qa.epub  qa.txt
docs/pool/: extra_pool.json  extra_pool_prose.json
docs/qa/: qa.epub  qa.txt
docs/static/: facts.epub
guides/: amatuer_extra_question_pool_statements.txt
mise/: config.toml
mise/tasks/: audio-render  audio-render-fact  audio-render-from-manifest  build  (+29 more)
scripts/: build_from_url.sh
tests/: test_audio_render.py  test_audio_script.py  test_audio_verify.py  test_build_outputs.py  test_build_prose_assets.py  test_cli.py  test_epub.py  test_extract.py  test_extract_docx_images.py  test_facts.py  test_intermediate.py  test_parser.py  test_prose.py  test_tts_pause.py
(+23 files in other folders)
